# api

./: README.md  pyproject.toml
api/: main.py
api/crud/: __init__.py  posts.py
api/models/: __init__.py  post.py
